deploy/aws/kubernetes/phase1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partner-system
  labels:
    name: partner-system
    environment: production
    phase: phase1
    system: goliath-partner-system
